Fix alignment bug on grid row

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -71,20 +71,22 @@ header {
   grid-row: 2 / 3;
 }
 
+#todo-list {
+  max-width: 75rem;
+  margin: 0 auto;
+}
+
 .todo-li {
   display: grid;
-  grid-template-columns: minmax(min-content, 10%) minmax(min-content, 10%) 1fr minmax(min-content, 10%) minmax(min-content, 10%) minmax(min-content, 10%);
+  grid-template-columns: minmax(min-content, 10%) minmax(min-content, 10%) 1fr minmax(min-content, 10%) min-content min-content;
   grid-template-rows: 1fr;
   align-items: center;
+  gap: 0.5rem;
 
   border: 1px solid black;
   padding: 0.5rem;
   margin: 0.5rem 0;
   border-radius: 0.25rem;;
-}
-
-.todo-li > div {
-  padding-left: 0.5rem;
 }
 
 .todo-li > div:first-of-type {
